Fix overflowing content

--- a/pagestyle.css
+++ b/pagestyle.css
@@ -3,6 +3,10 @@ body {
     margin: 0;
 }
 
+#wrapper {
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .hero, .intro, .info, .footer {
     background-color: #1f2937;
@@ -172,6 +176,7 @@ img {
 
 .fields {
     gap: 120px;
+    overflow: scroll;
 }
 
 .actuary, .cs, .quants, .stats {
